[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyIpUtil"
version = "0.0.2"
authors = [
  { name="ZachVFX", email="zachallrd@gmail.com" },
]
description = "A small package for block and unblock ip in python, with a CLI in options."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["IpUtil", "Ip", "Block", "Unblock", "CLI"]
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "fire",
]

[project.urls]
Homepage = "https://github.com/ZachVFXX/IpUtil/tree/main"
Issues = "https://github.com/ZachVFXX/IpUtil/issues"
